packages/kit/test/apps/basics/src/routes/errors/invalid-server-load-response/+page.svelte
<!-- this will never be rendered, load function returns something invalid -->
